# GRUL

./: .gitignore  PROJECT.md  README.md
configs/: grul-channel-vm.toml  grul-channel.toml  grul-channel.toml.example  grul-snap.toml
configs/profiles/: desktop-balanced.toml  dev-performance.toml  gaming-latency.toml  server-minimal.toml  vm-minimal.toml
docs/: ARCHITECTURE.md  AUDIT-PROJETS.md  CAHIER-DES-CHARGES.md  CLI.md  GRUL-UPDATE.md  INSTALL.md  POSITIONING.md  REPOSITORIES.md  ROADMAP.md  VM.md
packaging/apt/preferences.d/: grul
packaging/apt/sources.list.d/: grul-core.list  grul-current.list  grul-edge.list.disabled
packaging/cloud-init/: grul-vm.yaml
packaging/etc/grul/: release
packaging/metapackages/grul-cli/: control
packaging/metapackages/grul-core/: control
packaging/metapackages/grul-snap/: control
packaging/metapackages/grul-vm/: control
packaging/systemd/: grul-firstboot.service  grul-update-security.service  grul-update-security.timer
repos/: README.md
scripts/: build-debs.sh  grul-firstboot.sh  grul-install.sh  install-tools.sh  uninstall-grul.sh  vm-bootstrap.sh
tools/: Cargo.toml
tools/grul-cli/: Cargo.toml
tools/grul-cli/src/: dispatch.rs  help_text.rs  info.rs  main.rs
tools/grul-common/: Cargo.toml
tools/grul-common/src/: drivers.rs  lib.rs  vm.rs
tools/grul-detect/: Cargo.toml
tools/grul-detect/src/: main.rs
tools/grul-doctor/: Cargo.toml
tools/grul-doctor/src/: drivers.rs  main.rs  repair.rs  report.rs  vm_setup.rs
tools/grul-snap/: Cargo.toml
tools/grul-snap/src/: btrfs.rs  config.rs  main.rs  snap.rs  state.rs
tools/grul-tune/: Cargo.toml
tools/grul-tune/src/: apply.rs  main.rs
tools/grul-update/: Cargo.toml
tools/grul-update/src/: apt.rs  config.rs  main.rs  release.rs  snap_hook.rs  status.rs  upgrade.rs
