[package]
name = "grul-detect"
description = "GRUL hardware detection and profile recommendation"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "grul-detect"
path = "src/main.rs"

[dependencies]
grul-common = { path = "../grul-common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
