[package]
name = "grul-doctor"
description = "Diagnostics GRUL — santé système, setup VM, désinstallation"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "grul-doctor"
path = "src/main.rs"

[dependencies]
grul-common = { path = "../grul-common" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
