[package]
name = "grul-snap"
description = "Snapshots Btrfs optionnels avant mises à jour GRUL"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "grul-snap"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
