[package]
name = "grul-tune"
description = "GRUL profile tuner — apply and reset system optimizations"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "grul-tune"
path = "src/main.rs"

[dependencies]
grul-common = { path = "../grul-common" }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
